--- a/EditorHtml/EditorHtml.csproj
+++ b/EditorHtml/EditorHtml.csproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
       <Compile Remove="Teste.cs" />
+      <Compile Remove="Testee.cs" />
+      <Compile Remove="Terstess.cs" />
     </ItemGroup>
 
 </Project>
